@startuml gof_strategy

'Copyright 2026 Takayoshi Matsuyama
'
'Licensed under the Apache License, Version 2.0 (the "License");
'you may not use this file except in compliance with the License.
'You may obtain a copy of the License at
'
'    http://www.apache.org/licenses/LICENSE-2.0
'
'Unless required by applicable law or agreed to in writing, software
'distributed under the License is distributed on an "AS IS" BASIS,
'WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
'See the License for the specific language governing permissions and
'limitations under the License.

title GoF - Behavioral #09 - Strategy

Interface Strategy {
    algorithm_interface()
}

class ConcreteStrategyA {
    algorithm_interface()
}

class ConcreteStrategyB {
    algorithm_interface()
}

class ConcreteStrategyC {
    algorithm_interface()
}

Strategy <|.. ConcreteStrategyA
Strategy <|.. ConcreteStrategyB
Strategy <|.. ConcreteStrategyC

class Context {
    context_interface()
}

Context o-- Strategy : strategy

@enduml
